--- a/styles/style.css
+++ b/styles/style.css
@@ -1,51 +1,130 @@
+/*
+bg: #2f5375
+sim green: #4ea822
+sim font: #fff89d
+
+inset bg #32455b
+gradient light #96bad0
+gradient dark #527aa4
+
+bg dark gradient dark #476a8d
+bg dark gradient light #5f88af
+inset bg darker #2f4158
+
+bg fallback #7ca1bf
+*/
+
+@font-face {
+    font-family: "FreeSO Font";
+    src: url(/fonts/FreeSO.otf);
+}
+
 body {
+    font-family: 'FreeSO Font', cursive;
+    background-color: #7ca1bf;
+    background-image: linear-gradient(90deg, #476a8d, #5f88af);
+    text-shadow: 0px 2px 1px black;
 
-    font-family: 'Balsamiq Sans', cursive;
+    color:#fff89d;
+    font-size: 100%;
 }
 
-p {
-
-    color:black;
-    font-size: 2em;
+.box {
+    display: inline-block;
 }
 
-.simTable {
+.div-sim-table {
+    width: 100%;
+    max-width: 30%;
+    min-width: 300px;
+}
 
+.block-background {
+    width: 100%;
+    margin: 2px;
+
+    background-color: red;
+    border-radius: 45px 45px 45px 45px;
+    background-image: linear-gradient(90deg, #96bad0, #5f88af);
+
+    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.3) inset,
+                3px 3px 4px 2px rgba(255, 255, 255, 0.5) inset;
+}
+
+.inset-title {
+
+    width: fit-content;
+    
+    margin: 10px auto 10px auto;
+    padding: 8px 8px 8px 8px;
+    background-color: red;
+
+    font-size: clamp(1.5em, 1vw, 2em);
+    text-align: center;
+    letter-spacing: 0.05em;
+
+    border-radius: 25px 25px 25px 25px;
     border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 1.5em;
-    min-width: 400px;
-
-    border-radius: 10px 10px 0 0;
     overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+    background-color: #2f4158;
+    box-shadow: 3px 3px 4px 3px rgba(0, 0, 0, 0.4) inset,
+                0px -1px 1px 3px rgba(0, 0, 0, 0.35),
+                0px 3px 1px 3px rgba(255, 255, 255, 0.15);
 }
 
-.simTable thead tr {
+.list-table {
+    
+    margin: 10px 25px 35px 25px;
 
-    background-color: #4ea822;
+    background-color: #32455b;
+    color: #fff89d;
+    font-size: clamp(0.9em, 1vw, 2em);
+
+    border-radius: 10px 10px 10px 10px;
+    border-collapse: collapse;
+    overflow: hidden;
+
+    box-shadow: 3px 3px 4px 3px rgba(0, 0, 0, 0.35) inset, 
+                0px -1px 1px 3px rgba(0, 0, 0, 0.35),
+                0px 3px 1px 3px rgba(255, 255, 255, 0.15);
+}
+
+.list-table thead tr th {
+    width: 100%;
     color:white;
-    text-align: left;
     font-weight: bold;
+    padding: 6px 10px;
 }
 
-.simTable th, .simTable td {
-
-    padding: 8px 15px;
+.list-table td:nth-child(1), .list-table thead tr th:nth-child(1) {
+    text-align: left;
 }
 
-.simTable tbody tr {
-
-    border-bottom: 2px solid #aaaaaa;
-
+.list-table td:nth-child(2), .list-table thead tr th:nth-child(2) {
+    width: 1%;
+    white-space: nowrap;
+    text-align: right;
 }
 
-.simTable tbody tr:nth-of-type(even){
-
-    background-color: #f3f3f3;
+.list-table tr td{
+    padding: 3px 10px;
 }
 
-.simTable tbody tr:last-of-type {
+.div-lot-table {
+    width: 100%;
+    max-width: 30%;
+    min-width: 300px;
+}
 
-    border-bottom: 2px solid #4ea822;
+.div-lot-table-content {
+}
+
+.div-focus-view {
+    width: 100%;
+    max-width: 38%;
+    min-width: 400px;
+}
+
+.div-focus-view-content {
 }
