reduce font size

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ bg fallback #7ca1bf
 
 @font-face {
     font-family: "FreeSO Font";
-    src: url(/fonts/FreeSO.otf);
+    src: url(/fonts/FreeSOFont.otf);
 }
 
 body {
