--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,4 @@
 /*
-bg: #2f5375
-sim green: #4ea822
 sim font: #fff89d
 
 inset bg #32455b
@@ -12,11 +10,16 @@ bg dark gradient light #5f88af
 inset bg darker #2f4158
 
 bg fallback #7ca1bf
+
+bg thumbnail light #00bedc
+bg thumbnail dark #002594
+bg thumbnail fallback #016abb
+bg thumbnail border #395273
 */
 
 @font-face {
     font-family: "FreeSO Font";
-    src: url(/fonts/FreeSOFont.otf);
+    src: url(/styles/fonts/FreeSOFont.otf);
 }
 
 body {
@@ -29,20 +32,41 @@ body {
     font-size: 100%;
 }
 
-.box {
-    display: inline-block;
+.container {
+    display: flex;
+    flex-wrap:  wrap;
+    align-content: space-evenly;
+    gap: 1em;
 }
 
 .div-sim-table {
-    width: 100%;
-    max-width: 30%;
-    min-width: 300px;
+    width: fit-content;
+    height: fit-content;
+}
+
+.div-lot-table {
+    width: fit-content;
+    height: fit-content;
+}
+
+.div-focus-view {
+    width: fit-content;
+    height: fit-content;
+    flex: 1;
+}
+
+.div-thumbnail {
+    width: fit-content;
+    height: fit-content;
+
+    display: flex;
+    align-content: space-around;
+}
+
+.div-focus-view-content {
 }
 
 .block-background {
-    width: 100%;
-    margin: 2px;
-
     background-color: red;
     border-radius: 45px 45px 45px 45px;
     background-image: linear-gradient(90deg, #96bad0, #5f88af);
@@ -52,11 +76,10 @@ body {
 }
 
 .inset-title {
-
     width: fit-content;
     
     margin: 10px auto 10px auto;
-    padding: 8px 8px 8px 8px;
+    padding: 4px 12px 4px 12px;
     background-color: red;
 
     font-size: clamp(1.5em, 1vw, 2em);
@@ -71,6 +94,48 @@ body {
     box-shadow: 3px 3px 4px 3px rgba(0, 0, 0, 0.4) inset,
                 0px -1px 1px 3px rgba(0, 0, 0, 0.35),
                 0px 3px 1px 3px rgba(255, 255, 255, 0.15);
+}
+
+.thumbnail-text-holder {
+    margin: 25px 25px 25px 0px;
+    padding: 5px;
+
+    background-color: #32455b;
+    color: #fff89d;
+    font-size: clamp(0.9em, 1vw, 2em);
+
+    border-radius: 10px 10px 10px 10px;
+    border-collapse: collapse;
+    overflow: hidden;
+
+    box-shadow: 3px 3px 4px 3px rgba(0, 0, 0, 0.35) inset, 
+                0px -1px 1px 3px rgba(0, 0, 0, 0.35),
+                0px 3px 1px 3px rgba(255, 255, 255, 0.15);
+}
+
+.thumbnail-holder {
+    margin: 25px 25px 25px 25px;
+    padding: 5px;
+
+    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.3) inset,
+                3px 3px 4px 2px rgba(255, 255, 255, 0.5) inset,
+                -1px -1px 2px 2px rgba(0, 0, 0, 0.3),
+                1px 1px 2px 1px rgba(255, 255, 255, 0.7);
+
+    background-color: #016abb;
+    background-image: linear-gradient(0, #00bedc, #002594);
+}
+
+.thumbnail-oval {
+    border: 7px solid #395273;
+    border-radius: 50%;
+    padding: 0 10% 0 10%;
+    width: auto;
+}
+
+.thumbnail-oval img {
+    width: 288px;
+    height: 288px;
 }
 
 .list-table {
@@ -91,7 +156,6 @@ body {
 }
 
 .list-table thead tr th {
-    width: 100%;
     color:white;
     font-weight: bold;
     padding: 6px 10px;
@@ -109,22 +173,4 @@ body {
 
 .list-table tr td{
     padding: 3px 10px;
-}
-
-.div-lot-table {
-    width: 100%;
-    max-width: 30%;
-    min-width: 300px;
-}
-
-.div-lot-table-content {
-}
-
-.div-focus-view {
-    width: 100%;
-    max-width: 38%;
-    min-width: 400px;
-}
-
-.div-focus-view-content {
 }
