--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 /*
 sim font: #fff89d
+sim offline font: #969696
 
 inset bg #32455b
 gradient light #96bad0
@@ -15,6 +16,8 @@ bg thumbnail light #00bedc
 bg thumbnail dark #002594
 bg thumbnail fallback #016abb
 bg thumbnail border #395273
+
+outset title bg #5077a3
 */
 
 @font-face {
@@ -39,6 +42,10 @@ body {
     gap: 1em;
 }
 
+.container div{
+    /* outline: 10px solid red; */
+}
+
 .div-sim-table {
     width: fit-content;
     height: fit-content;
@@ -55,17 +62,6 @@ body {
     flex: 1;
 }
 
-.div-thumbnail {
-    width: fit-content;
-    height: fit-content;
-
-    display: flex;
-    align-content: space-around;
-}
-
-.div-focus-view-content {
-}
-
 .block-background {
     background-color: red;
     border-radius: 45px 45px 45px 45px;
@@ -80,7 +76,6 @@ body {
     
     margin: 10px auto 10px auto;
     padding: 4px 12px 4px 12px;
-    background-color: red;
 
     font-size: clamp(1.5em, 1vw, 2em);
     text-align: center;
@@ -96,81 +91,32 @@ body {
                 0px 3px 1px 3px rgba(255, 255, 255, 0.15);
 }
 
-.thumbnail-text-holder {
-    margin: 25px 25px 25px 0px;
-    padding: 5px;
+.outset-title {
+    width: fit-content;
 
-    background-color: #32455b;
-    color: #fff89d;
-    font-size: clamp(0.9em, 1vw, 2em);
-
-    border-radius: 10px 10px 10px 10px;
-    border-collapse: collapse;
-    overflow: hidden;
-
-    box-shadow: 3px 3px 4px 3px rgba(0, 0, 0, 0.35) inset, 
-                0px -1px 1px 3px rgba(0, 0, 0, 0.35),
-                0px 3px 1px 3px rgba(255, 255, 255, 0.15);
-}
-
-.thumbnail-holder {
-    margin: 25px 25px 25px 25px;
-    padding: 5px;
-
-    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.3) inset,
-                3px 3px 4px 2px rgba(255, 255, 255, 0.5) inset,
-                -1px -1px 2px 2px rgba(0, 0, 0, 0.3),
-                1px 1px 2px 1px rgba(255, 255, 255, 0.7);
-
-    background-color: #016abb;
-    background-image: linear-gradient(0, #00bedc, #002594);
-}
-
-.thumbnail-oval {
-    border: 7px solid #395273;
-    border-radius: 50%;
-    padding: 0 10% 0 10%;
-    width: auto;
-}
-
-.thumbnail-oval img {
-    width: 288px;
-    height: 288px;
-}
-
-.list-table {
-    
-    margin: 10px 25px 35px 25px;
-
-    background-color: #32455b;
-    color: #fff89d;
-    font-size: clamp(0.9em, 1vw, 2em);
-
-    border-radius: 10px 10px 10px 10px;
-    border-collapse: collapse;
-    overflow: hidden;
-
-    box-shadow: 3px 3px 4px 3px rgba(0, 0, 0, 0.35) inset, 
-                0px -1px 1px 3px rgba(0, 0, 0, 0.35),
-                0px 3px 1px 3px rgba(255, 255, 255, 0.15);
-}
-
-.list-table thead tr th {
-    color:white;
-    font-weight: bold;
-    padding: 6px 10px;
-}
-
-.list-table td:nth-child(1), .list-table thead tr th:nth-child(1) {
-    text-align: left;
-}
-
-.list-table td:nth-child(2), .list-table thead tr th:nth-child(2) {
-    width: 1%;
     white-space: nowrap;
-    text-align: right;
+    text-align: center;
+
+    margin: 25px 25px 25px 25px;
+    padding: 4px 15px 8px 15px;
+
+    font-size: clamp(1.5em, 1vw, 2em);
+    text-align: center;
+    letter-spacing: 0.05em;
+
+    border-radius: 25px 25px 25px 25px;
+    border-collapse: collapse;
+    overflow: hidden;
+
+    background-color: #5077a3;
+    box-shadow: -5px -5px 4px 3px rgba(0, 0, 0, 0.4) inset,
+                3px 3px 4px 3px rgba(255, 255, 255, 0.5) inset;
 }
 
-.list-table tr td{
-    padding: 3px 10px;
+.user-offline {
+    color: #969696;
+}
+
+.mouse-over-list-index {
+    color: white;
 }
