--- a/styles/style-thumbnail.css
+++ b/styles/style-thumbnail.css
@@ -16,16 +16,13 @@
 
 .thumb-1-1 {
     align-self: center;
-    font-size: 1.5em;
-    min-width: fit-content;
     width: 350px;
+    margin: 10px 6px;
 }
 
 .thumb-1-2 {
     align-self: center;
-}
-
-.thumb-2 {
+    margin: 0 0 15px 0;
 }
 
 .thumbnail-desc-holder p {
@@ -72,7 +69,6 @@
 .thumbnail-image {
     width: 100%;
     height: 100%;
-    outline: 5px solid red;
     position: relative;
 }
 
