--- a/styles/style.css
+++ b/styles/style.css
@@ -94,11 +94,8 @@ body {
 .outset-title {
     width: fit-content;
 
-    white-space: nowrap;
-    text-align: center;
-
-    margin: 25px 25px 25px 25px;
-    padding: 4px 15px 8px 15px;
+    margin: 10px auto 10px auto;
+    padding: 4px 12px 4px 12px;
 
     font-size: clamp(1.5em, 1vw, 2em);
     text-align: center;
