--- a/styles/style-thumbnail.css
+++ b/styles/style-thumbnail.css
@@ -11,13 +11,14 @@
     flex-direction: column;
     justify-content: flex-start;
     
-    padding: 0 0 0 25px;
+    padding-left: 25px;
 }
 
 .thumb-1-1 {
     align-self: center;
     width: 350px;
-    margin: 10px 6px;
+    padding: 0 10px 10px 10px;
+    margin: 12px;
 }
 
 .thumb-1-2 {
@@ -30,8 +31,8 @@
 }
 
 .thumbnail-desc-holder {
-    margin: 25px 25px 25px 25px;
-    padding: 5px 7px 5px 7px;
+    margin: 25px;
+    padding: 5px 7px;
 
     white-space: pre-line;
     letter-spacing: 0.5px;
@@ -40,7 +41,7 @@
     color: #fff89d;
     font-size: clamp(0.9em, 1vw, 2em);
 
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 10px;
     border-collapse: collapse;
     overflow: hidden;
 
