--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 sim font: #fff89d
 sim offline font: #969696
 
+table selection bg: #fac98c
+
 inset bg #32455b
 gradient light #96bad0
 gradient dark #527aa4
@@ -59,12 +61,14 @@ body {
 .div-focus-view {
     width: fit-content;
     height: fit-content;
-    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 .block-background {
-    background-color: red;
-    border-radius: 45px 45px 45px 45px;
+    border-radius: 45px;
     background-image: linear-gradient(90deg, #96bad0, #5f88af);
 
     box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.3) inset,
@@ -74,14 +78,14 @@ body {
 .inset-title {
     width: fit-content;
     
-    margin: 10px auto 10px auto;
-    padding: 4px 12px 4px 12px;
+    margin: 10px auto;
+    padding: 4px 12px;
 
     font-size: clamp(1.5em, 1vw, 2em);
     text-align: center;
     letter-spacing: 0.05em;
 
-    border-radius: 25px 25px 25px 25px;
+    border-radius: 25px;
     border-collapse: collapse;
     overflow: hidden;
 
@@ -92,28 +96,31 @@ body {
 }
 
 .outset-title {
-    width: fit-content;
-
-    margin: 10px auto 10px auto;
-    padding: 4px 12px 4px 12px;
+    margin: 10px auto;
+    padding: 4px 12px;
 
     font-size: clamp(1.5em, 1vw, 2em);
     text-align: center;
     letter-spacing: 0.05em;
 
-    border-radius: 25px 25px 25px 25px;
+    border-radius: 25px;
     border-collapse: collapse;
     overflow: hidden;
 
     background-color: #5077a3;
     box-shadow: -5px -5px 4px 3px rgba(0, 0, 0, 0.4) inset,
                 3px 3px 4px 3px rgba(255, 255, 255, 0.5) inset;
+
+    align-self: center;
+    width: 350px;
+    padding: 0 10px 3px 10px;
+    margin: 12px 6px;
 }
 
 .user-offline {
     color: #969696;
 }
 
-.mouse-over-list-index {
+.mouse-over-list-index, .column-header {
     color: white;
 }
