--- a/styles/style-thumbnail.css
+++ b/styles/style-thumbnail.css
@@ -66,6 +66,11 @@
     min-height: 250px;
 }
 
+.thumbnail-offline {
+    background-color: #736766;
+    background-image: linear-gradient(0, #8a7c7b, #615756);
+}
+
 /* this is fucked, whoopsies 🤪 */
 .thumbnail-image {
     width: 100%;
