filters for sims/lots
added case for sims at job lot

--- a/styles/style-thumbnail.css
+++ b/styles/style-thumbnail.css
@@ -36,6 +36,7 @@
 
     white-space: pre-line;
     letter-spacing: 0.5px;
+    white-space: pre;
 
     background-color: #32455b;
     color: #fff89d;
