--- a/styles/style.css
+++ b/styles/style.css
@@ -43,8 +43,8 @@ body {
 
 .container {
     display: flex;
-    flex-wrap:  wrap;
-    align-content: space-evenly;
+    overflow-x: auto;
+    align-items: stretch;
     gap: 1em;
 }
 
@@ -55,12 +55,16 @@ body {
 .column-1 {
     display: flex;
     flex-direction: column;
+    min-width: 360px;
+    flex: 1;
     gap: 1em;
 }
 
 .column-2 {
     display: flex;
     flex-direction: column;
+    min-width: 360px;
+    flex: 1;
     gap: 1em;
 }
 
@@ -73,6 +77,7 @@ body {
 .div-sim-table {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .div-lot-table {
