--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ body {
     font-family: 'FreeSO Font', cursive;
     background-color: #7ca1bf;
     background-image: linear-gradient(90deg, #476a8d, #5f88af);
+    background-attachment: fixed;
     text-shadow: 0px 2px 1px black;
 
     color:#fff89d;
@@ -43,7 +44,6 @@ body {
 
 .container {
     display: flex;
-    overflow-x: auto;
     align-items: stretch;
     gap: 1em;
 }
@@ -142,4 +142,36 @@ body {
 
 .mouse-over-list-index, .column-header {
     color: white;
+}
+
+.tooltip {
+    opacity: 0;
+
+    width: fit-content;
+    height: fit-content;
+
+    padding: 0px 5px;
+    border: 2px solid black;
+    background: white;
+
+    color: black;
+    font-size: 1.2em;
+    font-family: 'FreeSO Font', cursive;
+
+    transform: translate(-50%, -60px);
+    position: absolute;
+    white-space: nowrap;
+    z-index: 5;
+    
+    animation-name: fadeIn;
+    -webkit-animation-name: fadeIn;
+    animation-duration: 0.3s;
+    -webkit-animation-duration: 0.3s;
+    animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
