--- a/styles/style-eggs.css
+++ b/styles/style-eggs.css
@@ -34,6 +34,7 @@
     border-radius: 100%;
     box-shadow: 0 -25px 20px 2px #00bedc inset,
                 0 10px 20px 2px #002594 inset;
+    z-index: 3;
     animation: move 60s linear infinite;
 }
 
