--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,8 @@ body {
 }
 
 .inset-title {
+    cursor: default;
+
     width: fit-content;
     
     margin: 15px auto 5px auto;
@@ -114,6 +116,8 @@ body {
 }
 
 .outset-title {
+    cursor: default;
+
     margin: 10px auto;
     padding: 4px 12px;
 
