--- a/styles/style-thumbnail.css
+++ b/styles/style-thumbnail.css
@@ -40,7 +40,7 @@
 
     background-color: #32455b;
     color: #fff89d;
-    font-size: clamp(0.9em, 1vw, 2em);
+    font-size: clamp(1em, calc(1.2 * 1vw), 1.25em);
 
     border-radius: 10px;
     border-collapse: collapse;
