--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@ body {
     display: flex;
     flex-direction: column;
     min-width: 360px;
+    max-width: 511px;
     flex: 1;
     gap: 1em;
 }
@@ -64,6 +65,7 @@ body {
     display: flex;
     flex-direction: column;
     min-width: 360px;
+    max-width: 511px;
     flex: 1;
     gap: 1em;
 }
