--- a/styles/style-sim-thumbnail.css
+++ b/styles/style-sim-thumbnail.css
@@ -62,10 +62,12 @@
 
     width: 18.8vw;
     height: 12vw;
+    min-height: 200px;
+    min-width: 313px;
 
     background-color: #32455b;
     color: #fff89d;
-    font-size: clamp(0.9em, 1vw, 2em);
+    font-size: clamp(1em, 1vw, 2em);
 
     border-radius: 10px;
     border-collapse: collapse;
