--- a/styles/style-thumbnail.css
+++ b/styles/style-thumbnail.css
@@ -16,8 +16,9 @@
 
 .thumb-1-1 {
     align-self: center;
-    width: 350px;
-    padding: 0 10px 10px 10px;
+    min-width: 350px;
+    width: fit-content;
+    padding: 5px 15px 15px 15px;
     margin: 12px;
 }
 
