--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ body {
 .container {
     display: flex;
     align-items: stretch;
-    gap: 1em;
+    gap: 10px;
 }
 
 .container *{
@@ -58,7 +58,7 @@ body {
     min-width: 360px;
     max-width: 511px;
     flex: 1;
-    gap: 1em;
+    gap: 10px;
 }
 
 .column-2 {
@@ -67,32 +67,21 @@ body {
     min-width: 360px;
     max-width: 511px;
     flex: 1;
-    gap: 1em;
+    gap: 10px;
 }
 
 .column-3 {
     display: flex;
     flex-direction: column;
-    gap: 1em;
-}
-
-.div-sim-table {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.div-lot-table {
-    display: flex;
-    flex-direction: column;
+    gap: 10px;
 }
 
 .block-background {
     border-radius: 45px;
     background-image: linear-gradient(90deg, #96bad0, #5f88af);
 
-    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.3) inset,
-                3px 3px 4px 2px rgba(255, 255, 255, 0.5) inset;
+    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.4) inset,
+                4px 4px 5px 3px rgba(255, 255, 255, 0.65) inset;
 }
 
 .inset-title {
@@ -120,7 +109,6 @@ body {
 .outset-title {
     cursor: default;
 
-    min-width: fit-content;
     margin: 10px auto;
     padding: 4px 12px;
 
@@ -134,8 +122,8 @@ body {
     overflow: hidden;
 
     background-color: #5077a3;
-    box-shadow: -5px -5px 4px 3px rgba(0, 0, 0, 0.4) inset,
-                5px 5px 4px 3px rgba(255, 255, 255, 0.5) inset,
+    box-shadow: -2px -2px 3px 2px rgba(0, 0, 0, 0.4) inset,
+                5px 5px 3px 1px rgba(255, 255, 255, 0.5) inset,
                 3px 3px 3px 1px rgba(0, 0, 0, 0.6);
 
     align-self: center;
