- added sidebar with clock and job info - filter option to show sims at work - min/max button for filter panels

--- a/styles/style-eggs.css
+++ b/styles/style-eggs.css
@@ -4,7 +4,7 @@
     -webkit-text-fill-color: transparent;
     text-shadow: none;
     font-style: italic;
-    animation: move 60s linear infinite;
+    animation: move 3s linear infinite;
 }
 
 .rainbow-image {
@@ -87,7 +87,7 @@
 
 @keyframes move {
     to {
-        background-position: 400vh;
+        background-position: 215px;
     }
 }
 
