--- a/styles/style-lists.css
+++ b/styles/style-lists.css
@@ -17,7 +17,7 @@
 
     background-color: #32455b;
     color: #fff89d;
-    font-size: clamp(0.9em, calc(0.9 * 1vw), 1.1em);
+    font-size: 0.9em;
     white-space: nowrap;
     
     border-radius: 10px;
