--- a/styles/style.css
+++ b/styles/style.css
@@ -44,8 +44,9 @@ body {
 
 .container {
     display: flex;
-    align-items: stretch;
+    align-items: flex-start;
     gap: 10px;
+    position: absolute;
 }
 
 .container *{
@@ -57,7 +58,7 @@ body {
     flex-direction: column;
     min-width: 360px;
     max-width: 511px;
-    flex: 1;
+    flex: 0;
     gap: 10px;
 }
 
@@ -66,7 +67,7 @@ body {
     flex-direction: column;
     min-width: 360px;
     max-width: 511px;
-    flex: 1;
+    flex: 0;
     gap: 10px;
 }
 
@@ -91,7 +92,7 @@ body {
     margin: 15px auto 5px auto;
     padding: 4px 12px;
 
-    font-size: clamp(1.5em, calc(1.6 * 1vw), 2em);
+    font-size: 1.5em;
     text-align: center;
     letter-spacing: 0.05em;
     white-space: nowrap;
@@ -112,7 +113,7 @@ body {
     margin: 10px auto;
     padding: 4px 12px;
 
-    font-size: clamp(1.4em, calc(1.5 * 1vw), 1.8em);
+    font-size: 1.5em;
     text-align: center;
     letter-spacing: 0.05em;
     white-space: nowrap;
@@ -167,7 +168,74 @@ body {
     -webkit-animation-fill-mode: both;
 }
 
+.min-max-button {
+    border-radius: 50%;
+    box-shadow: -3px -3px 3px 2px rgba(0, 0, 0, 0.4) inset,
+                5px 5px 3px 1px rgba(255, 255, 255, 0.5) inset,
+                1px 1px 2px 1px rgba(0, 0, 0, 0.6);
+    width: 41px;
+    height: 41px;
+}
+
+.window-minable {
+    background: url(../images/buttons/min-window-button.png) 0 0;
+}
+
+.window-minable:hover {
+    background: url(../images/buttons/min-window-button.png) 82px 0;
+}
+
+.window-minable:active {
+    background: url(../images/buttons/min-window-button.png) 41px 0;
+}
+
+.window-maxable {
+    background: url(../images/buttons/min-window-button.png) 0 41px;
+}
+
+.window-maxable:hover {
+    background: url(../images/buttons/min-window-button.png) 82px 41px;
+}
+
+.window-maxable:active {
+    background: url(../images/buttons/min-window-button.png) 41px 41px;
+}
+
 @keyframes fadeIn {
     0% {opacity: 0;}
     100% {opacity: 1;}
+}
+
+@keyframes rotate180 {
+    0% {rotate: 0deg;}
+    100% {rotate: 180deg;}
+}
+
+@keyframes rotate180Reverse {
+    0% {rotate: 180deg;}
+    100% {rotate: 0deg;}
+}
+
+@keyframes sidebarExpand {
+    0% {}
+    100% {translate: 145px 0;}
+}
+
+@keyframes sidebarRetract {
+    0% {translate: 145px 0}
+    100% {}
+}
+
+@keyframes sidebarHolderSizeExpand {
+    0% {width: 200px;
+        height: 63px;}
+    50% {height: 169px;}
+    100% {width: 345px;}
+}
+
+@keyframes sidebarHolderSizeRetract {
+    0% {width: 345px;
+        height: 169px;}
+    50% {height: 63px;}
+    100% {width: 200px;}
 }
